完成 todos in coach & stu todo ： exam
